# ramulator

./: .gitignore  CMakeLists.txt  Makefile
configs/: DDR3-config.cfg
src/: Statistics.h
